[tool.poetry]
name = "dribbbl"
version = "1.0.0"
description = "Asynchronous Pictionary: users guess what others are drawing. Project made for CSCI 5117 Spring 2022."
authors = ["David Nguyen <nguy3482@umn.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
flask = "*"
gunicorn = "*"
requests = "*"
psycopg2 = "*"
authlib = "*"
python-dotenv = "*"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
